fixed category grid gap on desktop

--- a/css/category.css
+++ b/css/category.css
@@ -18,8 +18,9 @@
       "gamejam school"
       "gamejam prototypes"
       "other prototypes";
-    grid-template-rows: 16.5rem 71.5rem 26rem auto;
+    grid-template-rows: 16.5rem 71rem 26rem auto;
     grid-template-columns: 1fr 1fr;
+    grid-gap: 5rem;
 
     /* FOR 3 COLUMNS */
     /* grid-template-areas:
